--- a/Alpha_0_1/Alpha_0_1.csproj
+++ b/Alpha_0_1/Alpha_0_1.csproj
@@ -50,13 +50,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="App.g.cs">
+      <DependentUpon>App.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screens\TestScreen1.cs" />
+    <Compile Include="Screens\TestScreen1.g.cs">
+      <DependentUpon>TestScreen1.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Screens\" />
+    <Folder Include="Screens\ModuleA\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ModelCapabilities.json" />
+    <None Include="SoftwareModel.json" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Images\ImageForSwModel.png">
@@ -65,11 +74,31 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Progile.TRIO.BaseModel">
-      <Version>4.0.0</Version>
+      <Version>4.1.0</Version>
     </PackageReference>
     <PackageReference Include="Progile.TRIO.EnvironmentModel.Windows">
-      <Version>4.0.0.2</Version>
+      <Version>4.1.0.6</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Images\TestScreen1\Screen_Image\Default_Screen_Image.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\TestScreen1\Screen_Loaded\Screen_Loaded.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\TestScreen1\Switch Button\active\active.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\TestScreen1\Switch Button\inactive\inactive.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\TestScreen1\Text Label\Checkbox\checked\Checkbox_checked.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\TestScreen1\Text Label\Checkbox\unchecked\Different image name.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
