--- a/TC003_Rev1/TC003_Rev1.csproj
+++ b/TC003_Rev1/TC003_Rev1.csproj
@@ -61,10 +61,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Progile.TRIO.BaseModel">
-      <Version>*</Version>
+      <Version>5.2.8.3</Version>
     </PackageReference>
     <PackageReference Include="Progile.TRIO.EnvironmentModel.Windows">
-      <Version>*</Version>
+      <Version>5.2.8.3</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
