Add base test case

--- a/Alpha_0_1/Alpha_0_1.csproj
+++ b/Alpha_0_1/Alpha_0_1.csproj
@@ -53,6 +53,7 @@
     <Compile Include="App.g.cs">
       <DependentUpon>App.cs</DependentUpon>
     </Compile>
+    <Compile Include="BaseTestCase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screens\TestScreen1.cs" />
     <Compile Include="Screens\TestScreen1.g.cs">
