Upgrade Solution Version / SoftwareModel.json split

--- a/Alpha_0_1/Alpha_0_1.csproj
+++ b/Alpha_0_1/Alpha_0_1.csproj
@@ -66,6 +66,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="ModelCapabilities.json" />
+    <None Include="Screens\TestScreen1.g.json">
+      <DependentUpon>TestScreen1.cs</DependentUpon>
+    </None>
     <None Include="SoftwareModel.json" />
   </ItemGroup>
   <ItemGroup>
