upgrade model to new csproj

--- a/Alpha_0_1/App.config
+++ b/Alpha_0_1/App.config
@@ -1,7 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="PortalId" value="0_1"/>
-    <add key="ProjectType" value="Software"/>
+    <add key="PortalId" value="0_1" />
+    <add key="ProjectType" value="Software" />
+    <add key="ProjectFile" value="SdkStyle" />
   </appSettings>
 </configuration>
