upgrade TCs to new csproj

--- a/TC003_Rev1/TC003_Rev1.csproj
+++ b/TC003_Rev1/TC003_Rev1.csproj
@@ -1,37 +1,31 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5595A5B2-4C0F-4E87-8EA0-CEDCA90FBC7C}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TC003_Rev1</RootNamespace>
-    <AssemblyName>TC003_Rev1</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-    <TargetFrameworkProfile />
+    <TargetFramework>net462</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <LangVersion>latest</LangVersion>
+    <Title>FlipOver</Title>
+    <Product>Alpha</Product>
+    <Description>Testcase TestResults.io Project</Description>
+    <Deterministic>false</Deterministic>
+    <AssemblyVersion>1.0.*</AssemblyVersion>
+    <FileVersion>1.0</FileVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="EvidenceDirectory\**" />
+    <None Remove="lib\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Progile.TRIO.BaseModel" Version="*" />
+    <PackageReference Include="Progile.TRIO.EnvironmentModel.Windows" Version="*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Alpha_0_1\Alpha_0_1.csproj" />
+  </ItemGroup>
+
   <ItemGroup>
     <Reference Include="Progile.ATE.Common">
       <HintPath>lib\Progile.ATE.Common.dll</HintPath>
@@ -39,47 +33,16 @@
     <Reference Include="Progile.ATE.TestFramework">
       <HintPath>lib\Progile.ATE.TestFramework.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="FlipOver.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Using Include="Alpha_Model" />
+    <Using Include="Progile.ATE.Common" />
+    <Using Include="Progile.ATE.TestFramework;" />
+    <Using Include="Progile.TRIO.BaseModel" />
+    <Using Include="TestImages.TC003_Rev1">
+      <Static>True</Static>
+    </Using>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Images\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Progile.TRIO.BaseModel">
-      <Version>5.2.8.3</Version>
-    </PackageReference>
-    <PackageReference Include="Progile.TRIO.EnvironmentModel.Windows">
-      <Version>5.2.8.3</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Alpha_0_1\Alpha_0_1.csproj">
-      <Project>{3FE7ACAB-E9E5-49F7-ADF9-EE6AA99C345E}</Project>
-      <Name>Alpha_0_1</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <CoreCompileDependsOn>$(CoreCompileDependsOn);GeneratedImageClasses</CoreCompileDependsOn>
-  </PropertyGroup>
-  <Target Name="GeneratedImageClasses">
-    <ItemGroup>
-      <Compile Include="$(IntermediateOutputPath)GeneratedClasses\**\*.struct.cs" />
-    </ItemGroup>
-  </Target>
+
 </Project>
