--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,6 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/TC001_Rev1/Properties/launchSettings.json
+/TC003_Rev1/Properties/launchSettings.json
+/TC004_Rev1/Properties/launchSettings.json
