Update Installer project to sdk style

--- a/Alpha_0_1_Installer/App.config
+++ b/Alpha_0_1_Installer/App.config
@@ -3,5 +3,6 @@
   <appSettings>
     <add key="PortalId" value="0_1"/>
     <add key="ProjectType" value="Installer"/>
+    <add key="ProjectFile" value="SdkStyle" />
   </appSettings>
 </configuration>
