--- a/Alpha_0_1/Alpha_0_1.csproj
+++ b/Alpha_0_1/Alpha_0_1.csproj
@@ -25,16 +25,8 @@
 
   <ItemGroup>
     <PackageReference Include="Progile.TRIO.BaseModel" Version="*" />
+    <PackageReference Include="Progile.TRIO.Engine.TestFramework" Version="5.7.0.2" />
     <PackageReference Include="Progile.TRIO.EnvironmentModel.Windows" Version="*" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Progile.ATE.Common">
-      <HintPath>lib\Progile.ATE.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Progile.ATE.TestFramework">
-      <HintPath>lib\Progile.ATE.TestFramework.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
