--- a/Alpha_0_1_Installer/Alpha_0_1_Installer.csproj
+++ b/Alpha_0_1_Installer/Alpha_0_1_Installer.csproj
@@ -33,12 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Progile.ATE.Common">
-      <HintPath>lib\Progile.ATE.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Progile.ATE.TestFramework">
-      <HintPath>lib\Progile.ATE.TestFramework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -56,6 +50,9 @@
   <ItemGroup>
     <PackageReference Include="Progile.TRIO.BaseModel">
       <Version>5.2.8.3</Version>
+    </PackageReference>
+    <PackageReference Include="Progile.TRIO.Engine.TestFramework">
+      <Version>5.7.0.2</Version>
     </PackageReference>
     <PackageReference Include="Progile.TRIO.EnvironmentModel.Windows">
       <Version>5.2.8.3</Version>
