--- a/TC001_Rev1/TC001_Rev1.csproj
+++ b/TC001_Rev1/TC001_Rev1.csproj
@@ -19,20 +19,12 @@
 
   <ItemGroup>
     <PackageReference Include="Progile.TRIO.BaseModel" Version="*" />
+    <PackageReference Include="Progile.TRIO.Engine.TestFramework" Version="5.7.0.2" />
     <PackageReference Include="Progile.TRIO.EnvironmentModel.Windows" Version="*" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Alpha_0_1\Alpha_0_1.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Progile.ATE.Common">
-      <HintPath>lib\Progile.ATE.Common.dll</HintPath>
-    </Reference>
-    <Reference Include="Progile.ATE.TestFramework">
-      <HintPath>lib\Progile.ATE.TestFramework.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
   <ItemGroup>
