Migrate Installer Project to SDK Style; Cleanup

--- a/Alpha_0_1/Alpha_0_1.csproj
+++ b/Alpha_0_1/Alpha_0_1.csproj
@@ -15,17 +15,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="lib\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Folder Include="Images\" />
     <Folder Include="Screens\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Progile.TRIO.BaseModel" Version="*" />
-    <PackageReference Include="Progile.TRIO.Engine.TestFramework" Version="5.7.0.2" />
+    <PackageReference Include="Progile.TRIO.Engine.TestFramework" Version="*" />
     <PackageReference Include="Progile.TRIO.EnvironmentModel.Windows" Version="*" />
   </ItemGroup>
 
