--- a/TC004_Rev1/TC004_Rev1.csproj
+++ b/TC004_Rev1/TC004_Rev1.csproj
@@ -14,12 +14,11 @@
 
   <ItemGroup>
     <None Remove="EvidenceDirectory\**" />
-    <None Remove="lib\**" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Progile.TRIO.BaseModel" Version="*" />
-    <PackageReference Include="Progile.TRIO.Engine.TestFramework" Version="5.7.0.2" />
+    <PackageReference Include="Progile.TRIO.Engine.TestFramework" Version="*" />
     <PackageReference Include="Progile.TRIO.EnvironmentModel.Windows" Version="*" />
   </ItemGroup>
 
